@@ -67,3 +67,4 @@ v1.5
 * Remember only a limited number of chunk locations for memory usage.
 * Add option (`-M 1`) to support for moving chunks. Chunks must be locked properly to be moved.
 * Fix out of memory by Unmap() with large ranges.
+* Add option (`-X 0`) to disable truncating completely unmapped chunk.
